test/corpus/accounts.txt
================================================================================
UTF-8 account name
================================================================================

2020-12-02
    Dépenses:Grosse Dépense

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (xact
      (plain_xact
        (date)
        (posting
          (account))))))

================================================================================
numeric account name
================================================================================

2021-01-01
    State:2021:Tax

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (xact
      (plain_xact
        (date)
        (posting
          (account))))))

================================================================================
account name with symbols
================================================================================

2021-01-01
    Bank:Account-Name&Oth€r$ymbols

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (xact
      (plain_xact
        (date)
        (posting
          (account))))))

================================================================================
single letter account name
================================================================================

2021-01-01
    A

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (xact
      (plain_xact
        (date)
        (posting
          (account))))))
