test/corpus/comments_and_notes.txt
================================================================================
with ; comment
================================================================================
; hello

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (comment)))

================================================================================
with * comment
================================================================================
* hello

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (comment)))

================================================================================
notes
================================================================================
2020-12-01 Something  ; title note
    ; some note
    Expenses:Food:Groceries                21.36 EUR ; asdfsadf
    ; another note
    Assets:Bank:Checking

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (xact
      (plain_xact
        (date)
        (payee)
        (note)
        (posting
          (account)
          (amount
            (quantity)
            (commodity))
          (note))
        (note)
        (posting
          (account))))))

================================================================================
multiple comments
================================================================================
; something
* something

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (comment))
  (journal_item
    (comment)))

================================================================================
blank lines
================================================================================

; comment

* comment

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (comment))
  (journal_item
    (comment)))

================================================================================
metadata tags
================================================================================

2012-03-10 * KFC
    Expenses:Food                $20.00
    Assets:Cash
      ; :TAG1:TAG2:TAG3:

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (xact
      (plain_xact
        (date)
        (status)
        (payee)
        (posting
          (account)
          (amount
            (commodity)
            (quantity)))
        (posting
          (account))
        (note)))))
