test/corpus/periodic_transactions.txt
================================================================================
periodic transactions
================================================================================

~ monthly
    State:2021:Tax

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (xact
      (periodic_xact
        (interval)
        (posting
          (account))))))

================================================================================
case insensitive interval
================================================================================

~ yEaRlY
    State:2021:Tax

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (xact
      (periodic_xact
        (interval)
        (posting
          (account))))))

================================================================================
periodic transactions with integer interval
================================================================================

~ eVerY 20 wEeKs
    Expenses:Groceries:Chocolate  2000 EUR ; don't ask questions

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (xact
      (periodic_xact
        (interval)
        (posting
          (account)
          (amount
            (quantity)
            (commodity))
          (note))))))

================================================================================
periodic transactions require interval
================================================================================

~
    State:2021:Tax

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (ERROR)))
